--- a/index.html
+++ b/index.html
@@ -73,6 +73,36 @@
       .오브젝트 {
         position: absolute;
       }
+
+      .아이템 {
+        width: 24px;
+        height: 24px;
+        border: none;
+        border-radius: 50%;
+        animation: item2 5s ease infinite, show 1s ease;
+        transition: all 0.4s ease;
+        background: linear-gradient(
+            217deg,
+            rgb(255 0 0 / 80%),
+            rgb(255 0 0 / 0%) 70.71%
+          ),
+          linear-gradient(127deg, #fff1dc, rgba(255, 241, 220, 0) 70.71%),
+          linear-gradient(336deg, rgb(0 0 255 / 80%), rgb(0 0 255 / 0%) 70.71%);
+        box-shadow: inset -2px -2px 2px #da891f90, inset -5px -5px 2px #ffffff50,
+          5px 5px 3px #5c4dba50;
+        filter: none;
+      }
+      @keyframes item2 {
+        0% {
+          filter: brightness(1.3) contrast(1.5);
+        }
+        50% {
+          filter: contrast(1.8);
+        }
+        100% {
+          filter: contrast(1.5);
+        }
+      }
     </style>
     <!--기본설정적 스타일-->
     <style>
@@ -658,6 +688,7 @@
         대상.style.animation = `${
           $admin ? '개쩖폭발' : '폭발'
         } 0.8s ease-out forwards`;
+        $admin = false;
         const 폭발확인 = setInterval(() => {
           const 폭발범위 = 대상.getBoundingClientRect();
           for (const key in 요소기록) {
@@ -693,6 +724,7 @@
       let 인터버 = null;
       let 이동값 = { x: 0, y: 0 };
       let 폭탄여부 = true;
+      let 아이템여부 = true;
       let 요소기록 = { '#플레이어': { x: 0, y: 0, name: '플레이어' } };
       //let 인터버주기 = 1000;
       document.addEventListener('keydown', (e) => {
@@ -732,6 +764,17 @@
               }
             }
             이동('#플레이어', 이동값.x, 이동값.y, 10);
+            if (HTML('#아이템') && 터치('#플레이어', '#아이템') && 아이템여부) {
+              아이템여부 = false;
+              아이템 = ['폭탄'];
+              $admin = true;
+              console.log($admin);
+              HTML('#아이템').style.opacity = 0;
+              setTimeout(() => {
+                HTML('#아이템').remove();
+                아이템여부 = true;
+              }, 500);
+            }
             //console.log('ddf')
           }, 50);
         }
@@ -976,7 +1019,7 @@
             deg: Math.floor(Math.random() * 180) + 1,
           };
 
-          if (i>=num-레벨) {
+          if (i >= num - 레벨) {
             HTML(`#적${적카운터}`).style.border = 'none';
             HTML(`#적${적카운터}`).style.width = '12px';
             HTML(`#적${적카운터}`).style.height = '12px';
@@ -987,6 +1030,7 @@
         }
       }
       let 체력 = 3;
+      let 아이템 = [];
       async function 관리() {
         for (let i = 0; i < 30; i++) {
           setTimeout(() => {
@@ -1002,6 +1046,29 @@
               적군생성량 = Math.round((적군생성량 *= 8 / 10));
             }
             적군생성(적군생성량);
+            if (랜덤(1,5) > 레벨-1 && !HTML('#아이템')) {
+                const 월 = HTML('#월드').getBoundingClientRect();
+                let x = 월.width/2 + 랜덤(-400,400);
+                let y = 월.height/2+ 랜덤(-200,200) ;
+                console.log(x,y)
+                const 폭탄아이템 = document.createElement('div');
+                폭탄아이템.classList.add('아이템');
+                폭탄아이템.classList.add('오브젝트');
+                폭탄아이템.style.position = 'absolute';
+                폭탄아이템.id = `아이템`;
+                폭탄아이템.style.bottom = `${y}px`;
+                폭탄아이템.style.left = `${x}px`;
+                폭탄아이템.style.opacity = 0;
+                폭탄아이템.innerHTML = '?';
+                폭탄아이템.style.fontWeight = 'bold';
+                폭탄아이템.style.display = 'flex';
+                폭탄아이템.style.alignItems = 'cetner';
+                폭탄아이템.style.justifyContent = 'center';
+                폭탄아이템.style.color = '#FFF1DC80';
+                //폭탄아이템.innerHTML = `<div class="shadow"></div>`;
+                HTML('#월드').appendChild(폭탄아이템);
+                HTML('#아이템').style.opacity = 1;
+              }
             웨이브 = setInterval(() => {
               //console.log(요소기록);
               if (체력 <= 0) {
@@ -1060,7 +1127,7 @@
 
         for (const key in 요소기록) {
           const 대상요소기록 = 요소기록[key];
-          if (!대상요소기록.name.includes('플레이어') && 체력>0) {
+          if (!대상요소기록.name.includes('플레이어') && 체력 > 0) {
             if (!대상요소기록.alive) {
               continue;
             }
@@ -1091,7 +1158,7 @@
               }, 500);
             }
             if (대상요소기록.type == 'spec' && 랜덤(0, 100) > 70) {
-              대상요소기록.deg =방향(대상요소기록.name, '#플레이어');
+              대상요소기록.deg = 방향(대상요소기록.name, '#플레이어');
               이동거리 *= 100;
               HTML(대상요소기록.name).style.filter = 'brightness(2)';
               setTimeout(() => {
