--- a/index.html
+++ b/index.html
@@ -474,11 +474,12 @@
         animation: 팝창1 1s ease;
         display: flex;
         transition: all 0.5s ease;
+        align-items:center;
       }
 
       .팝창이미지 {
         width: 50px;
-        height: 50px;
+        height: auto;
         /*border: 1px solid black;*/
         margin-right: 12px;
       }
@@ -853,7 +854,7 @@
               아이템여부 = false;
               아이템 = ['폭탄'];
               팝창(
-                '',
+                'https://ifh.cc/g/YhC0xl.png',
                 '대형폭탄',
                 '미니폭탄보다 훨씬 큰 폭탄을 사용할 수 있어요! 스페이스키를 눌러서 사용하세요!'
               );
