--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         }
         30% {
           background-color: rgba(255, 105, 105, 1);
-          transform: scale(30);
+          transform: scale(15);
           border-radius: 10px;
           opacity: 0.8;
           box-shadow: 0 0 4px 2px rgba(255, 85, 85, 0.8),
@@ -298,23 +298,25 @@
         }
         50% {
           background-color: rgba(255, 120, 120, 1);
-          transform: scale(10);
+          transform: scale(5);
           opacity: 0.6;
           box-shadow: 0 0 6px 3px rgba(255, 120, 120, 0.8),
             0 0 8px 4px rgba(255, 85, 85, 0.5);
         }
         80% {
           background-color: rgba(255, 85, 85, 1);
-          transform: scale(50);
+          transform: scale(25);
           opacity: 0.4;
           box-shadow: 0 0 8px 4px rgba(255, 85, 85, 0.8),
             0 0 10px 5px rgba(255, 140, 0, 0.6);
+          border-radius: 5px;
         }
         100% {
           background-color: rgba(255, 85, 85, 0);
-          transform: scale(100);
+          transform: scale(50);
           opacity: 0;
           box-shadow: 0 0 10px 5px rgba(255, 85, 85, 0.8);
+          border-radius: 5px;
         }
       }
 
@@ -856,7 +858,7 @@
               팝창(
                 'https://ifh.cc/g/YhC0xl.png',
                 '대형폭탄',
-                '미니폭탄보다 훨씬 큰 폭탄을 사용할 수 있어요! 스페이스키를 눌러서 사용하세요!'
+                '강력한 두번의 파동폭발을 발생시켜요! 스페이스키를 눌러서 사용하세요!'
               );
               $admin = true;
               console.log($admin);
@@ -1137,7 +1139,7 @@
               적군생성량 = Math.round((적군생성량 *= 8 / 10));
             }
             적군생성(적군생성량);
-            if (랜덤(1, 5) > 레벨 - 1 && !HTML('#아이템')) {
+            if (랜덤(1, 3) > 1 && !HTML('#아이템')) {
               const 월 = HTML('#월드').getBoundingClientRect();
               let x = 월.width / 2 + 랜덤(-400, 400);
               let y = 월.height / 2 + 랜덤(-200, 200);
