--- a/index.html
+++ b/index.html
@@ -777,6 +777,7 @@
           $admin ? '개쩖폭발' : '폭발'
         } 0.8s ease-out forwards`;
         $admin = false;
+        아이템.splice(아이템.findIndex(i => i.includes("폭탄")), 1);
         const 폭발확인 = setInterval(() => {
           const 폭발범위 = 대상.getBoundingClientRect();
           for (const key in 요소기록) {
@@ -854,14 +855,18 @@
             이동('#플레이어', 이동값.x, 이동값.y, 10);
             if (HTML('#아이템') && 터치('#플레이어', '#아이템') && 아이템여부) {
               아이템여부 = false;
-              아이템 = ['폭탄'];
+              if(랜덤(1,50>25)){
+              아이템.push('폭탄');
               팝창(
                 'https://ifh.cc/g/YhC0xl.png',
                 '대형폭탄',
                 '강력한 두번의 파동폭발을 발생시켜요! 스페이스키를 눌러서 사용하세요!'
               );
               $admin = true;
-              console.log($admin);
+              console.log($admin);}
+              else if(true){
+                아이템.push('무적');
+              }
               HTML('#아이템').style.opacity = 0;
               setTimeout(() => {
                 HTML('#아이템').remove();
@@ -1022,11 +1027,11 @@
       function 시작() {
         if (스킬.includes('stren')) {
           플레이어속도 *= 1.5;
-        }
-        HTML('#score').style.margin = '70px 12px';
         HTML('#score').max = 5;
         HTML('#score').value = 5;
         체력 = 5;
+        }
+        HTML('#score').style.margin = '70px 12px';
         관리();
       }
     </script>
