--- a/index.html
+++ b/index.html
@@ -1253,21 +1253,21 @@
             if (대상요소기록.type == 'spec') {
               이동거리 *= 0.5;
             }
-            if (대상요소기록.type == 'spec' && 랜덤(0, 100) > 70) {
+            /*if (대상요소기록.type == 'spec' && 랜덤(0, 100) > 70) {
               대상요소기록.deg += 랜덤(100, 200);
               이동거리 *= 100;
-              HTML(대상요소기록.name).style.backgroundColor = '#BBA093';
+              HTML(대상요소기록.name).style.backgroundColor = '#E6CCC0';
               setTimeout(() => {
                 HTML(대상요소기록.name).style.backgroundColor = 'black';
               }, 300);
-            }
-            if (대상요소기록.type == 'spec' && 랜덤(0, 100) > 50) {
+            }*/
+            if (대상요소기록.type == 'spec' && 랜덤(0, 100) > 70) {
               대상요소기록.deg = 방향(대상요소기록.name, '#플레이어');
               이동거리 *= 100;
-              HTML(대상요소기록.name).style.backgroundColor = '#BBA093';
+              HTML(대상요소기록.name).style.backgroundColor = '#E48A61';
               setTimeout(() => {
                 HTML(대상요소기록.name).style.backgroundColor = 'black';
-              }, 300);
+              }, 100);
             }
             let 이동X = 이동거리 * Math.sin(대상요소기록.deg * (Math.PI / 180));
             let 이동Y = 이동거리 * Math.cos(대상요소기록.deg * (Math.PI / 180));
