--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8" />
     <title>꽁꽁 얼어붙은 한강 위에 종이비행기가</title>
     <meta name="viewport" content="width=device-width" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Sans+KR:wght@600&display=swap" rel="stylesheet">
+
+
     <style>
       body {
         margin: 0px;
@@ -45,7 +50,7 @@
           #ff9830,
           #ff8000
         );
-        transition: all 0.1s ease;
+        transition: all 0.1s ease, opacity 0.8s ease;
         box-shadow: inset -2px -2px 2px #da891f90,
           inset -22px -22px 2px #ffffff50, 5px 5px 3px #5c4dba50;
       }
@@ -107,8 +112,8 @@
     <!--기본설정적 스타일-->
     <style>
       progress {
-        width: 150px;
-        height: 10px;
+        width: 200px;
+        height: 15px;
         border-radius: 10px;
         border: none;
         background-color: rgba(255, 255, 255, 0.1);
@@ -122,16 +127,20 @@
 
       progress::-webkit-progress-value {
         transition: all 0.5s ease;
-        background-color: rgba(255, 255, 255, 0.5);
+        background: linear-gradient(270deg, #FFFFFF, #FFFFFF65);
         border-radius: 10px;
       }
 
       progress::-moz-progress-bar {
         transition: all 0.5s ease;
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: linear-gradient(270deg, #FFFFFF, #FFFFFF65);
         border-radius: 10px;
       }
       #window {
+        font-family: 'Noto Sans KR', serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
         position: absolute;
         z-index: 10;
         width: 400px;
@@ -144,7 +153,7 @@
         align-items: center;
         align-content: center;
         transition: height 0.5s ease;
-        background-color: #25222180;
+        background: linear-gradient(180deg, #25222180, #00000060);
         color: #fff2e1;
         backdrop-filter: blur(5px);
       }
@@ -172,7 +181,7 @@
 
       button {
         border-radius: 20px;
-        background-color: #00000060;
+        background-color: #ffffff10;
         color: #ffffffcc;
         font-weight: bold;
         transition: all 0.3s ease;
@@ -195,13 +204,14 @@
         }
       }
       button:hover {
-        background-color: #ffffff10;
-        transform: translateY(-3px) scale(1.02);
+        background-color: #ffffff20;
+        color:white;
+        transform: scale(1.1);
         filter: brightness(1.5);
       }
 
       button:active {
-        transform: scale(0.95);
+        transform: scale(0.9);
       }
 
       #name {
@@ -313,7 +323,7 @@
         }
         100% {
           background-color: rgba(255, 85, 85, 0);
-          transform: scale(40);
+          transform: scale(50);
           opacity: 0;
           box-shadow: 0 0 10px 5px rgba(255, 85, 85, 0.8);
           border-radius: 5px;
@@ -332,7 +342,7 @@
       }
 
       .highlight {
-        color: #ffca85;
+        color: #FABF71;
       }
 
       .abilities-section {
@@ -343,7 +353,7 @@
       .skill-card {
         margin: 5px;
         padding: 5px;
-        background-color: #3f3a3999;
+        background: #3B393770;
         color: white;
         border-radius: 5px;
         text-align: center;
@@ -358,11 +368,11 @@
       }
 
       .skill-card:hover {
-        transform: scale(1.04) translateY(-8px);
+        transform: scale(1.05) translateY(-8px);
         filter: brightness(1.3);
-        border: 5px solid #635959;
+        border: 5px solid #53505680;
         box-sizing: border-box;
-        box-shadow: 0px 5px 1px #ffffff30;
+        box-shadow: 0px 5px 0.5px #33333380;
       }
 
       .skill-card:active {
@@ -432,13 +442,18 @@
       }
       #stage {
         margin: 8px 12px;
-        color: white;
-        font-size: 40px;
+        background: linear-gradient(270deg, #FFFFFF, #FFFFFF99);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 45px;
         font-weight: bold;
         transition: all 1s ease;
         position: absolute;
         width: 200px;
         z-index: 100;
+        font-family: "Do Hyeon", serif;
+        font-weight: 400;
+        font-style: normal;
       }
 
       #score {
@@ -476,7 +491,10 @@
         animation: 팝창1 1s ease;
         display: flex;
         transition: all 0.5s ease;
-        align-items:center;
+        align-items: center;
+        font-family: "Do Hyeon", serif;
+        font-weight: 400;
+        font-style: normal;
       }
 
       .팝창이미지 {
@@ -491,7 +509,6 @@
 
       .팝창제목 {
         font-size: 18px;
-        font-weight: bold;
       }
 
       @keyframes 팝창1 {
@@ -777,7 +794,10 @@
           $admin ? '개쩖폭발' : '폭발'
         } 0.8s ease-out forwards`;
         $admin = false;
-        아이템.splice(아이템.findIndex(i => i.includes("폭탄")), 1);
+        아이템.splice(
+          아이템.findIndex((i) => i.includes('폭탄')),
+          1
+        );
         const 폭발확인 = setInterval(() => {
           const 폭발범위 = 대상.getBoundingClientRect();
           for (const key in 요소기록) {
@@ -855,23 +875,25 @@
             이동('#플레이어', 이동값.x, 이동값.y, 10);
             if (HTML('#아이템') && 터치('#플레이어', '#아이템') && 아이템여부) {
               아이템여부 = false;
-              if(랜덤(1,2)>1){
-              아이템.push('폭탄');
-              팝창(
-                'https://ifh.cc/g/YhC0xl.png',
-                '대형폭탄',
-                '강력한 두번의 파동폭발을 발생시켜요! 스페이스키를 눌러서 사용하세요!'
-              );
-              $admin = true;}
-              else if(true){
+              if (랜덤(1, 2) > 1) {
+                아이템.push('폭탄');
+                팝창(
+                  'https://ifh.cc/g/YhC0xl.png',
+                  '대형폭탄',
+                  '강력한 두번의 파동폭발을 발생시켜요! 스페이스키를 눌러서 사용하세요!'
+                );
+                $admin = true;
+              } else if (true) {
                 아이템.push('무적');
                 팝창(
-                'https://ifh.cc/g/q216WY.png',
-                '5초무적',
-                '5초간 무적이에요!'
-              );
-              HTML('#플레이어').style.opacity = 0.5;
-              setTimeout(()=>{HTML('#플레이어').style.opacity = 1;},5000)
+                  'https://ifh.cc/g/q216WY.png',
+                  '5초무적',
+                  '5초간 무적이에요!'
+                );
+                HTML('#플레이어').style.opacity = 0.5;
+                setTimeout(() => {
+                  HTML('#플레이어').style.opacity = 1;
+                }, 5000);
               }
               HTML('#아이템').style.opacity = 0;
               setTimeout(() => {
@@ -1033,9 +1055,9 @@
       function 시작() {
         if (스킬.includes('stren')) {
           플레이어속도 *= 1.5;
-        HTML('#score').max = 5;
-        HTML('#score').value = 5;
-        체력 = 5;
+          HTML('#score').max = 5;
+          HTML('#score').value = 5;
+          체력 = 5;
         }
         HTML('#score').style.margin = '70px 12px';
         관리();
@@ -1150,7 +1172,7 @@
               적군생성량 = Math.round((적군생성량 *= 8 / 10));
             }
             적군생성(적군생성량);
-            if (레벨%2 !== 0 && !HTML('#아이템')) {
+            if (레벨 % 2 !== 0 && !HTML('#아이템')) {
               const 월 = HTML('#월드').getBoundingClientRect();
               let x = 월.width / 2 + 랜덤(-400, 400);
               let y = 월.height / 2 + 랜덤(-200, 200);
@@ -1324,7 +1346,11 @@
             HTML(
               대상요소기록.name
             ).style.transform = `rotate(${대상요소기록.deg}deg)`;
-            if (터치('#플레이어', 대상요소기록.name) && 충돌중복방지 && HTML('#플레이어').style.opacity !== '0.5') {
+            if (
+              터치('#플레이어', 대상요소기록.name) &&
+              충돌중복방지 &&
+              HTML('#플레이어').style.opacity !== '0.5'
+            ) {
               충돌중복방지 = false;
               const 적군Id = 대상요소기록.name;
               if (대상요소기록.alive) {
