--- a/index.html
+++ b/index.html
@@ -605,11 +605,7 @@
         return document.querySelector(name);
       }
       function 랜덤(min, max) {
-        const time = Date.now();
-        let seed = time ^ (time >> 3);
-        seed = (seed * 9301 + 49297) % 233280;
-        const random = (seed / 233280) * Math.sin(seed);
-        return Math.floor((Math.abs(random) % 1) * (max - min + 1)) + min;
+        return Math.floor(Math.random() * (max - min + 1)) + min;
       }
 
       function 토글(문자, 글자) {
@@ -875,7 +871,8 @@
             이동('#플레이어', 이동값.x, 이동값.y, 10);
             if (HTML('#아이템') && 터치('#플레이어', '#아이템') && 아이템여부) {
               아이템여부 = false;
-              if (랜덤(1, 2) > 1) {
+              let 랜 = 랜덤(1, 3)
+              if (랜 == 1) {
                 아이템.push('폭탄');
                 팝창(
                   'https://ifh.cc/g/YhC0xl.png',
@@ -883,7 +880,7 @@
                   '강력한 두번의 파동폭발을 발생시켜요! 스페이스키를 눌러서 사용하세요!'
                 );
                 $admin = true;
-              } else if (랜덤(1, 2) > 1) {
+              } else if (랜 == 2) {
                 //아이템.push('무적');
                 팝창(
                   'https://ifh.cc/g/q216WY.png',
