--- a/index.html
+++ b/index.html
@@ -1237,6 +1237,7 @@
             count++;
           }
         }
+        if(스킬.includes('jump')){최종점수 ++};
         최종점수 = 레벨 - 1;
         최종점수 -= count;
         if (최종점수 < 0) {
