--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         color: #fff2e1;
         backdrop-filter: blur(5px);
         transform: scale(1);
-        boxshadow: inset 5px 5px 5px #FFFFFF40, inset -5px -5px 5px #00000060;
+        box-shadow: inset 5px 5px 5px #FFFFFF40, inset -5px -5px 5px #00000060;
       }
 
       .window-holder {
