--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         transition: all 0.5s ease;
         font-size: 15px;
         border: 5px solid #ffffff00;
-        box-shadow: 0px 0px 0px #00000000;
+        box-shadow: 0px 0px 0px #00000000,inset 2px 2px 5px #FFFFFF10, inset -2px -2px 5px #00000050;
       }
 
       .section-title {
