--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
       .skill-card:hover {
         transform: scale(1.05) translateY(-8px);
         filter: brightness(1.3);
-        border: 5px solid #46444880;
+        border: 5px solid #3B3937;
         box-sizing: border-box;
         box-shadow: 0px 5px 0.5px #33333380,inset 4px 4px 5px #FFFFFF15, inset -4px -4px 5px #00000060;
       }
