--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         cursor: pointer;
         opacity: 0;
         animation: showB 0.5s ease-in-out;
+        box-shadow: inset 4px 4px 5px #FFFFFF15, inset -4px -4px 5px #00000060;
       }
 
       @keyframes showB {
