--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
       button:hover {
         background-color: #ffffff20;
         color:white;
-        transform: scale(1.1);
-        filter: brightness(1.5);
+        transform: scale(1.02) translateY(-4px);
+        filter: brightness(1.2);
       }
 
       button:active {
