--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
         알림(
           '게임오버',
           `
-    체력이 0이 되었어요 😓
+    체력이 바닥났어요 😓
     <div style = "margin:20px;"><hr style="width: 30%; height: 2px; background-color: #FFFFFF50; border: none;">
   </div>
     🏆점수 • <span class = "highlight">${최종점수}</span>${
