--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
     <div></div><div style = "font-size:12px; margin-top: 5px;">(옆에 배치된 포스트잇에 이 코드를 적고 보상을 받으러 가보세요!)</div>
     `,
           '다시플레이',
-          '/*location.reload()*/window.alert(`동아리 부원에게 요청해주세요! 플레이 횟수를 맞추기 위함입니다!`);'
+          'location.reload()/*window.alert(`동아리 부원에게 요청해주세요! 플레이 횟수를 맞추기 위함입니다!`);*/'
         );
         HTML('#월드').style.filter = ``;
       }
