--- a/index.html
+++ b/index.html
@@ -973,6 +973,8 @@
               }
             }
             이동('#플레이어', 이동값.x, 이동값.y, 10);
+            if(Math.abs(이동값.x)>0){HTML('#플레이어').style.width = '20px';}
+            if(Math.abs(이동값.y)>0){HTML('#플레이어').style.height = '20px';}
             if (HTML('#아이템') && 터치('#플레이어', '#아이템') && 아이템여부) {
               아이템여부 = false;
               let 랜 = 랜덤(1, 3);
@@ -1024,6 +1026,8 @@
         //console.log(인덱스)
         if (입력.length == 0) {
           clearInterval(인터버);
+          HTML('#플레이어').style.width = '22px';
+          HTML('#플레이어').style.height = '22px';
           인터버 = null;
         }
       });
