--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
         bomb.id = `b${폭탄개수}`;
         bomb.style.left = `${요소기록['#플레이어'].x + 5}px`;
         bomb.style.bottom = `${요소기록['#플레이어'].y + 5}px`;
-        bomb.innerHTML = 'B';
+        bomb.innerHTML = '•';
         HTML('#월드').appendChild(bomb);
 
         setTimeout(() => {
