index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -1493,6 +1493,8 @@
               대상요소기록.deg = 방향(대상요소기록.name, '#플레이어');
               방향이동(대상요소기록.name, 대상요소기록.deg, 10);
               //alert('d')
+//alert(HTML("보드").innerText);
+
             }
             HTML(대상요소기록.name).style.transition =
               'all 2s linear, transform 1s ease, width 3s ease, height 3s ease, border 3s ease, border-radius 3s ease';
